src/objects/LeanData__Marketing_Lead__c.object
<CustomObject>
    <description>To track leads from marketing automation systems that have matched to existing leads.</description>
    <fields>
        <fullName>LeanData__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Job_Id__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Lead_Reference__c</fullName>
        <description>Id of the lead on LeanData&apos;s Rails instance</description>
        <externalId>true</externalId>
        <label>LD Lead Reference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__LastMatchedAt__c</fullName>
        <description>Tracks the timestamp for the last time a MarketingLead was matched against LCA</description>
        <label>LastMatchedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LeadSource__c</fullName>
        <label>LeadSource</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sys_Created_Date__c</fullName>
        <label>Marketing Sys Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sys_Id__c</fullName>
        <externalId>true</externalId>
        <label>Marketing Sys Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sys_Lead_Score__c</fullName>
        <label>Marketing Sys Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Lead</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>LeanData__LD_Lead_Reference__c</columns>
        <columns>LeanData__Marketing_Sys_Created_Date__c</columns>
        <columns>LeanData__Marketing_Sys_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Job_Id__c</columns>
        <columns>LeanData__LastMatchedAt__c</columns>
        <columns>LeanData__LastName__c</columns>
        <columns>LeanData__FirstName__c</columns>
        <columns>LeanData__Email__c</columns>
        <columns>LeanData__Company__c</columns>
        <columns>LeanData__Website__c</columns>
        <columns>LeanData__Street__c</columns>
        <columns>LeanData__City__c</columns>
        <columns>LeanData__LeadSource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>